manifest/objects/Apttus__IDEMapProjectRecordType__c.object
<CustomObject>
    <description>Holds the mapping between IDE project and the record type</description>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The mapping description</description>
        <inlineHelpText>The mapping description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ProjectId__c</fullName>
        <description>The project ID</description>
        <externalId>true</externalId>
        <inlineHelpText>The project ID</inlineHelpText>
        <label>Project ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordTypeName__c</fullName>
        <description>The name of the associated record type</description>
        <externalId>true</externalId>
        <inlineHelpText>The name of the associated record type</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IDE Map Project Record Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Map Project Record Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>